test/y_error_17.j.gold
test/y_error_17.j:12:5: error: fields cannot have 'Void' type
    |
 12 |     Void x;
    |     ^
